k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ezkafka-visualizer
  labels:
    name: ezkafka-visualizer
